# ROB_Intro_ROS2_Humble_Phantom_Pincher_X100_Updated

./: .gitignore  README.md
guias/Moveit/: MOTION_COMMANDS.md  readme.md
guias/Proyecto/: readme.md
guias/ROS2_basics/: README.md  ejemplo_deteccion_movimiento.py  ejemplo_mover_robot.py  (+4 more)
laboratorios_propuestos/: laboratorio1.md
phantom_ws/src/phantomx_pincher_description/: CMakeLists.txt  readme.md
phantom_ws/src/phantomx_pincher_description/docs/: add_suction_cup_link.md  anadir_link_ventosa.md  mover_end_effector_frame.md  pasosAñadirObjetosArmXacro.md  srdf_kit_collisions.md  ventosa_parametro_use_suction_cup.md
phantom_ws/src/phantomx_pincher_description/meshes/DAE/: acopleSuctionCupGripper.dae  canecaAmarilla.dae  canecaAzul.dae  canecaRojo.dae  canecaVerde.dae  ensambleAirpump.dae  ensambleArbotix.dae  ensambleBase.dae  ensambleBaseBrazo.dae  ensambleBase_fixed.dae  ensambleMultitoma.dae  ensambleRaspberrypi.dae  ensambleSoporteC270Webcam.dae  suctionCupGripper.dae
phantom_ws/src/phantomx_pincher_description/meshes/STL/: acopleSuctionCupGripper.stl  suctionCupGripper.stl
phantom_ws/src/phantomx_pincher_description/phantomx_pincher/: model.sdf
phantom_ws/src/phantomx_pincher_description/rviz/: view.rviz
phantom_ws/src/phantomx_pincher_description/scripts/: xacro2sdf_direct.bash
phantom_ws/src/phantomx_pincher_description/urdf/: kit.xacro  phantomx_pincher.gazebo  phantomx_pincher.ros2_control  phantomx_pincher.urdf  phantomx_pincher.urdf.xacro  phantomx_pincher_arm.xacro  phantomx_pincher_hardware.xacro  phantomx_pincher_inertial.xacro  phantomx_pincher_mounting.xacro  phantomx_pincher_utils_failed.xacro
phantom_ws/src/phantomx_pincher_moveit_config/: CMakeLists.txt  readme.md
phantom_ws/src/phantomx_pincher_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
phantom_ws/src/phantomx_pincher_moveit_config/launch/: move_group.launch.py
phantom_ws/src/phantomx_pincher_moveit_config/rviz/: moveit.rviz
phantom_ws/src/phantomx_pincher_moveit_config/srdf/: phantomx_pincher.srdf  phantomx_pincher.srdf.xacro  phantomx_pincher.xacro
(+43 files in other folders)
